# 371os

./: .gitignore
02/src/: main.rs
21/src/: main.rs
22/malloc/src/: lib.rs  main.rs
32/osirs/: Cargo.toml  README.md  main
allocator/: Cargo.toml
allocator/.cargo/: config.toml
allocator/src/: allocator.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga.rs
bare-metal/: Cargo.toml
bare-metal/src/: main.rs
clock/: Cargo.toml  x86_64-osirs.json
clock/.cargo/: config.toml
clock/src/: gdt.rs  interrupts.rs  lib.rs  main.rs
exceptions/: Cargo.toml
exceptions/src/: interrupts.rs  lib.rs  main.rs
exceptions/tests/: println.rs  should_panic.rs
format/: Cargo.toml  x86_64-blog_os.json
format/.cargo/: config.toml
format/src/: main.rs  vga.rs
graphics/src/: colors.rs  colors_hex.txt  extract_colors.py  main.rs  url_to_rs.py
graphics/src/colors/: img.rs
handlers/: Cargo.toml  x86_64-osirs.json
handlers/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  vga.rs
handlers/tests/: except.rs  println.rs  should_panic.rs
hello/: Cargo.toml
hello/.cargo/: config.toml
hello/src/: main.rs
integration/: Cargo.toml  x86_64-osirs.json
integration/src/: lib.rs  main.rs
integration/tests/: basic.rs  println.rs  should_panic.rs
keyboard/: Cargo.toml
keyboard/src/: interrupts.rs  lib.rs  main.rs  serial.rs
mapping/: Cargo.toml
mapping/src/: lib.rs  main.rs
pagefault/: Cargo.toml
pagefault/src/: lib.rs  main.rs
serial/: Cargo.toml
serial/src/: main.rs  serial.rs  vga.rs
snake/: Cargo.toml
snake/src/: interrupts.rs  lib.rs  main.rs  snake.rs
snake/tests/: heap_allocation.rs
src/: main.rs
unsafe-split/src/: lib.rs  main.rs
