[package]
name = "integration"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9"
x86_64 = "0.14"
uart_16550 = "0.2"
spin = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }

# This prevents Cargo from trying to build unit tests on your Mac
[lib]
test = false
doctest = false

[[bin]]
name = "integration"
test = false

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
