[package]
name = "mapping"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
spin = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"

[[bin]]
name = "mapping"
path = "src/main.rs"

[package.metadata.bootimage]
run-args = ["-serial", "stdio", "-display", "cocoa"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-timeout = 5
test-success-exit-code = 21

[unstable]
build-std = ["core", "compiler_builtins"]
build-std-features = ["compiler-builtins-mem"]
