[package]
name = "serial"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = "0.9"
x86_64 = "0.14.2"
uart_16550 = "0.2.19"
spin = "0.9.8"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-timeout = 1
test-success-exit-code = 33
